--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A simple graphical user interface (GUI) application for downloading videos from online sources.",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "electron ."
   },
   "repository": {
     "type": "git",
