--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/eimlav/youtube-dl-gui#readme",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.8.1",
+    "@microlink/youtube-dl": "^1.13.1",
     "bulma": "^0.7.4",
     "electron": "^4.1.1"
   }
