--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.8.1",
     "bulma": "^0.7.4",
-    "electron": "^4.1.1"
+    "electron": "^4.1.1",
+    "sudo-prompt": "^8.2.5"
   }
 }
